--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
@@ -20,7 +19,7 @@
             android:layout_height="80dp"
             android:id="@+id/buttonEquals"
             android:layout_marginEnd="16dp"
-            android:onClick="onClickFunctions"
+            android:onClick="onClickUtils"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textSize="50sp"
@@ -249,7 +248,6 @@
             android:inputType="none"
             android:textSize="45sp"
             android:textAlignment="textEnd"
-            android:onClick="onClick"
             android:cursorVisible="false"
     />
 
