--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="match_parent"
+                                             android:background="@drawable/bg">
     <Button
             android:id="@+id/buttonAdd"
             android:layout_width="100dp"
@@ -20,6 +22,7 @@
             android:id="@+id/buttonEquals"
             android:layout_marginEnd="16dp"
             android:onClick="onClickUtils"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textSize="50sp"
@@ -206,6 +209,7 @@
             android:layout_marginStart="16dp"
             android:text="@string/buttonClear"
             android:textSize="20sp"
+            android:onClick="onClickUtils"
             app:layout_constraintBottom_toTopOf="@id/buttonNine"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/resultEquation"
