--- a/app/src/main/res/drawable/bg.xml
+++ b/app/src/main/res/drawable/bg.xml
@@ -2,7 +2,7 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
             android:startColor="#654ea3"
-            android:endColor="#eaafc8"
+            android:endColor="#6A82FB"
     />
     <size
             android:height="2280px"
