--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -227,7 +227,7 @@
             app:layout_constraintBottom_toTopOf="@+id/buttonZero"
             app:layout_constraintStart_toEndOf="@+id/buttonClear"
             android:layout_marginStart="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/resultEquation"
+            app:layout_constraintTop_toBottomOf="@id/resultEquation"
     />
 
     <Button
@@ -246,13 +246,15 @@
     />
 
     <EditText
+            android:inputType="none"
+            android:cursorVisible="false"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:id="@+id/resultEquation"
-            android:inputType="none"
-            android:textSize="45sp"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
             android:textAlignment="textEnd"
-            android:cursorVisible="false"
+            android:textSize="30sp"
     />
 
 </android.support.constraint.ConstraintLayout>
