--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -212,7 +212,7 @@
             android:onClick="onClickUtils"
             app:layout_constraintBottom_toTopOf="@id/buttonNine"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resultEquation"
+            app:layout_constraintTop_toBottomOf="@id/scroll"
             android:id="@+id/buttonClear"
     />
 
@@ -227,7 +227,7 @@
             app:layout_constraintBottom_toTopOf="@+id/buttonZero"
             app:layout_constraintStart_toEndOf="@+id/buttonClear"
             android:layout_marginStart="14dp"
-            app:layout_constraintTop_toBottomOf="@id/resultEquation"
+            app:layout_constraintTop_toBottomOf="@id/scroll"
     />
 
     <Button
@@ -239,22 +239,39 @@
             android:text="@string/buttonPoint"
             android:textSize="40sp"
             android:onClick="onClickNumbers"
-            app:layout_constraintTop_toBottomOf="@id/resultEquation"
+            app:layout_constraintTop_toBottomOf="@id/scroll"
             app:layout_constraintBottom_toTopOf="@id/buttonDivide"
             app:layout_constraintStart_toEndOf="@id/buttonClearEverything"
             app:layout_constraintEnd_toEndOf="parent"
     />
 
-    <EditText
-            android:inputType="none"
-            android:cursorVisible="false"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:id="@+id/resultEquation"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:textAlignment="textEnd"
-            android:textSize="30sp"
-    />
+    <HorizontalScrollView android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:id="@+id/scroll"
+                          android:paddingEnd="10dp"
+                          android:paddingStart="10dp"
+                          android:scrollbars="none"
+    >
+
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:clickable="false"
+                android:focusableInTouchMode="false"
+                android:id="@+id/resultEquation"
+                android:singleLine="true"
+                android:textSize="30sp"
+                android:gravity="end"
+                android:textAlignment="textEnd"
+                android:cursorVisible="false"
+                android:inputType="none"
+                android:paddingTop="20dp"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
+                android:background="@null"
+        />
+
+    </HorizontalScrollView>
 
 </android.support.constraint.ConstraintLayout>
