--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,277 +1,239 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             android:background="@drawable/bg">
-    <Button
-            android:id="@+id/buttonAdd"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="@string/add"
-            android:layout_marginEnd="16dp"
-            android:textSize="50sp"
-            android:onClick="onClickFunctions"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/buttonEquals"/>
-    <Button
-            android:text="@string/equals"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
-            android:id="@+id/buttonEquals"
-            android:layout_marginEnd="16dp"
-            android:onClick="onClickUtils"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/bg"
+              android:orientation="vertical">
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="50sp"
-            android:layout_marginBottom="16dp"/>
-    <Button
-            android:text="@string/substrain"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/buttonMinus"
-            android:onClick="onClickFunctions"
-            android:layout_marginEnd="16dp"
-            android:textSize="50sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="1dp"
-            app:layout_constraintBottom_toTopOf="@+id/buttonAdd"/>
-    <Button
-            android:text="@string/multiply"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/buttonMultiply"
-            android:layout_marginEnd="16dp"
-            android:textSize="50sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:onClick="onClickFunctions"
-            android:layout_marginBottom="1dp"
-            app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
-    />
-    <Button
-            android:text="@string/divide"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/buttonDivide"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:onClick="onClickFunctions"
-            android:layout_marginBottom="1dp"
-            android:textSize="50sp"
-            app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"/>
-    <Button
-            android:layout_width="100dp"
-            android:layout_height="80dp"
-            android:text="@string/one"
-            android:id="@+id/buttonOne"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
-            android:onClick="onClickNumbers"
-            android:textSize="50sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-    />
-    <Button
-            android:layout_width="100dp"
-            android:layout_height="80dp"
-            android:text="@string/two"
-            android:id="@+id/buttonTwo"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:onClick="onClickNumbers"
-            android:textSize="50sp"
-            app:layout_constraintStart_toEndOf="@id/buttonOne"
-            app:layout_constraintEnd_toStartOf="@id/buttonEquals"
-            app:layout_constraintBottom_toBottomOf="parent"
-    />
-    <Button
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="@string/three"
-            android:id="@+id/buttonThree"
-            android:layout_marginBottom="1dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:onClick="onClickNumbers"
-            android:textSize="50sp"
-            app:layout_constraintBottom_toTopOf="@id/buttonOne"
-            app:layout_constraintStart_toStartOf="parent"
-    />
 
-    <Button
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="@string/four"
-            android:id="@+id/buttonFour"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginEnd="16dp"
-            android:onClick="onClickNumbers"
-            android:textSize="50sp"
-            app:layout_constraintStart_toEndOf="@id/buttonThree"
-            app:layout_constraintEnd_toStartOf="@id/buttonAdd"
-            app:layout_constraintBottom_toTopOf="@id/buttonTwo"
-    />
 
-    <Button
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="@string/five"
-            android:id="@+id/buttonFive"
-            android:layout_marginBottom="1dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:onClick="onClickNumbers"
-            android:textSize="50sp"
-            app:layout_constraintBottom_toTopOf="@id/buttonThree"
-            app:layout_constraintStart_toStartOf="parent"
-    />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <Button
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="@string/six"
-            android:id="@+id/buttonSix"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginEnd="16dp"
-            android:onClick="onClickNumbers"
-            android:textSize="50sp"
-            app:layout_constraintStart_toEndOf="@id/buttonFive"
-            app:layout_constraintEnd_toStartOf="@id/buttonMinus"
-            app:layout_constraintBottom_toTopOf="@id/buttonFour"
-    />
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:orientation="vertical">
 
-    <Button
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="@string/seven"
-            android:id="@+id/buttonSeven"
-            android:layout_marginBottom="1dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:onClick="onClickNumbers"
-            android:textSize="50sp"
-            app:layout_constraintBottom_toTopOf="@id/buttonFive"
-            app:layout_constraintStart_toStartOf="parent"
-    />
+            <HorizontalScrollView android:layout_width="match_parent"
+                                  android:layout_height="wrap_content"
+                                  android:id="@+id/scroll"
+                                  android:scrollbars="none"
+            >
 
-    <Button
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="@string/eight"
-            android:id="@+id/buttonEight"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginEnd="16dp"
-            android:onClick="onClickNumbers"
-            android:textSize="50sp"
-            app:layout_constraintStart_toEndOf="@id/buttonSeven"
-            app:layout_constraintEnd_toStartOf="@id/buttonMultiply"
-            app:layout_constraintBottom_toTopOf="@id/buttonSix"
-    />
+                <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:clickable="false"
+                        android:focusableInTouchMode="false"
+                        android:id="@+id/resultEquation"
+                        android:singleLine="true"
+                        android:textSize="35sp"
+                        android:gravity="end"
+                        android:textAlignment="textEnd"
+                        android:cursorVisible="false"
+                        android:inputType="none"
+                        android:paddingTop="20dp"
+                        android:paddingEnd="10dp"
+                        android:paddingStart="10dp"
+                        android:background="@null"
+                />
 
-    <Button
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="@string/nine"
-            android:id="@+id/buttonNine"
-            android:layout_marginBottom="1dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:onClick="onClickNumbers"
-            android:textSize="50sp"
-            app:layout_constraintBottom_toTopOf="@id/buttonSeven"
-            app:layout_constraintStart_toStartOf="parent"
-    />
+            </HorizontalScrollView>
 
-    <Button
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="@string/zero"
-            android:id="@+id/buttonZero"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginEnd="16dp"
-            android:onClick="onClickNumbers"
-            android:textSize="50sp"
-            app:layout_constraintStart_toEndOf="@id/buttonNine"
-            app:layout_constraintEnd_toStartOf="@id/buttonDivide"
-            app:layout_constraintBottom_toTopOf="@id/buttonEight"
-    />
+        </LinearLayout>
 
-    <Button
-            android:layout_height="60dp"
-            android:layout_width="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="@string/buttonClear"
-            android:textSize="20sp"
-            android:onClick="onClickUtils"
-            app:layout_constraintBottom_toTopOf="@id/buttonNine"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/scroll"
-            android:id="@+id/buttonClear"
-    />
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="0dp"
+                      android:layout_weight="1">
 
-    <Button
-            android:layout_height="60dp"
-            android:layout_width="100dp"
-            android:text="@string/buttonClearEverything"
-            android:textSize="25sp"
-            android:onClick="onClickUtils"
-            android:layout_marginBottom="0dp"
-            android:id="@+id/buttonClearEverything"
-            app:layout_constraintBottom_toTopOf="@+id/buttonZero"
-            app:layout_constraintStart_toEndOf="@+id/buttonClear"
-            android:layout_marginStart="14dp"
-            app:layout_constraintTop_toBottomOf="@id/scroll"
-    />
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:clickable="false"
+                    android:focusableInTouchMode="false"
+                    android:id="@+id/midResultEquation"
+                    android:singleLine="true"
+                    android:textSize="30sp"
+                    android:gravity="end"
+                    android:textAlignment="textEnd"
+                    android:cursorVisible="false"
+                    android:inputType="none"
+                    android:paddingTop="20dp"
+                    android:paddingEnd="10dp"
+                    android:paddingStart="10dp"
+                    android:background="@null"
+            />
 
-    <Button
-            android:id="@+id/buttonPoint"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/buttonPoint"
-            android:textSize="40sp"
-            android:onClick="onClickNumbers"
-            app:layout_constraintTop_toBottomOf="@id/scroll"
-            app:layout_constraintBottom_toTopOf="@id/buttonDivide"
-            app:layout_constraintStart_toEndOf="@id/buttonClearEverything"
-            app:layout_constraintEnd_toEndOf="parent"
-    />
+        </LinearLayout>
 
-    <HorizontalScrollView android:layout_width="match_parent"
-                          android:layout_height="wrap_content"
-                          android:id="@+id/scroll"
-                          android:paddingEnd="10dp"
-                          android:paddingStart="10dp"
-                          android:scrollbars="none"
-    >
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:orientation="horizontal">
 
-        <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:focusable="false"
-                android:clickable="false"
-                android:focusableInTouchMode="false"
-                android:id="@+id/resultEquation"
-                android:singleLine="true"
-                android:textSize="30sp"
-                android:gravity="end"
-                android:textAlignment="textEnd"
-                android:cursorVisible="false"
-                android:inputType="none"
-                android:paddingTop="20dp"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
-                android:background="@null"
-        />
+            <TextView
+                    android:id="@+id/buttonClearEverything"
+                    android:text="@string/buttonClearEverything"
+                    style="@style/UtilsButtonStyle"
+            />
 
-    </HorizontalScrollView>
+            <TextView
+                    android:id="@+id/buttonLeftPar"
+                    android:text="@string/leftPar"
+                    style="@style/NumberButtonStyle"
+            />
 
-</android.support.constraint.ConstraintLayout>
+            <TextView
+                    android:id="@+id/buttonRightPar"
+                    android:text="@string/rightPar"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <ImageView
+                    android:id="@+id/buttonClear"
+                    android:src="@drawable/backspace"
+                    android:scaleType="center"
+                    style="@style/UtilsButtonStyle"
+            />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:orientation="horizontal">
+
+            <TextView
+                    android:id="@+id/buttonSeven"
+                    android:text="@string/seven"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonEight"
+                    android:text="@string/eight"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonNine"
+                    android:text="@string/nine"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonDivide"
+                    android:text="@string/divide"
+                    style="@style/FunctionButtonStyle"
+            />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:orientation="horizontal">
+
+            <TextView
+                    android:id="@+id/buttonFour"
+                    android:text="@string/four"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonFive"
+                    android:text="@string/five"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonSix"
+                    android:text="@string/six"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonMultiply"
+                    android:text="@string/multiply"
+                    style="@style/FunctionButtonStyle"
+            />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:orientation="horizontal">
+
+            <TextView
+                    android:id="@+id/buttonOne"
+                    android:text="@string/one"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonTwo"
+                    android:text="@string/two"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonThree"
+                    android:text="@string/three"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonMinus"
+                    android:text="@string/substrain"
+                    style="@style/FunctionButtonStyle"
+            />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:orientation="horizontal">
+
+            <TextView
+                    android:id="@+id/buttonZero"
+                    android:text="@string/zero"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonPoint"
+                    android:text="@string/buttonPoint"
+                    style="@style/NumberButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonEquals"
+                    android:text="@string/equals"
+                    style="@style/UtilsButtonStyle"
+            />
+
+            <TextView
+                    android:id="@+id/buttonAdd"
+                    android:text="@string/add"
+                    style="@style/FunctionButtonStyle"
+
+            />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
