--- a/app/src/main/res/drawable/bg.xml
+++ b/app/src/main/res/drawable/bg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-            android:startColor="#654ea3"
-            android:endColor="#6A82FB"
+            android:startColor="#FFEFBA"
+            android:endColor="#FFFFFF"
     />
     <size
             android:height="2280px"
