--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
                 <EditText
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:focusable="false"
                         android:clickable="false"
                         android:focusableInTouchMode="false"
@@ -49,8 +49,7 @@
 
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="0dp"
-                      android:layout_weight="1">
-
+                      android:layout_weight="2">
             <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
